--- a/style.css
+++ b/style.css
@@ -14,12 +14,17 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    width: 200px;
+    white-space: nowrap;
 }
 
 .bottom {
     padding: 20px;
     text-align: center;
+}
+
+.logo {
+    position: relative;
+    left: calc(50% - 32.5px);
 }
 
 .spinner {
@@ -63,10 +68,14 @@ body {
 }
 
 @media (prefers-color-scheme: dark) {
-    html {
+    html, body {
         color-scheme: dark;
     }
     .path {
         stroke: #fff;
     }
+}
+
+.get-perm {
+    width: 100%;
 }
